--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,6 @@ jobs:
         run: |
           docker run -d -p 8000:8000 --name test-container dockerized-api:test
           sleep 5
-          curl -f http://localhost:8000/health || exit 1
+          python -c "import urllib.request; urllib.request.urlopen('http://localhost:8000/health')" || exit 1
           docker stop test-container
           docker rm test-container
